--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,8 @@ nobase_dist_doc_DATA = README.md
 if LCOV_PRESENT
 .PHONY: coverage
 
+clean-local: clean-coverage
+
 coverage: coverage/index.html
 
 coverage/index.html: coverage.info
@@ -11,4 +13,7 @@ coverage/index.html: coverage.info
 
 coverage.info: check
 	$(LCOV) --capture --directory src/ --output $@
+
+clean-coverage:
+	-rm -rf coverage/ coverage.info
 endif
