--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: picosocks5
 Section: contrib/net
 Priority: optional
 Maintainer: Alec Kojaev <alec.kojaev@gmail.com>
-Build-Depends: debhelper (>= 9), autotools-dev, pandoc, gnutls-dev, libssl-dev
-Standards-Version: 3.9.8
+Build-Depends: debhelper (>= 10), pandoc, gnutls-dev, libssl-dev
+Standards-Version: 4.4.1
 Homepage: https://gitlab.com/oldnomad/picosocks5
 
 Package: picosocks5-utils
